# master_eq_analyser

./: main.py  main_gui.py  pyproject.toml
